--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,7 +1,8 @@
 if( METATEST )
 	add_library( test_meta_range_queries test_meta_range_queries.cpp )
+endif()
 
-elseif( GTEST )
+if( GTEST )
 	include( FetchContent )
 	FetchContent_Declare(
 		googletest
