--- a/bench/CMakeLists.txt
+++ b/bench/CMakeLists.txt
@@ -1,11 +1,15 @@
-if( GBENCH )
-	add_executable(
-		gbench_rq
-		gbench_range_queries.cpp
-	)
+add_executable(
+        gbench_nplib
+        gbench_nplib.cpp
+)
 
-	find_package( benchmark REQUIRED )
+find_package( benchmark REQUIRED )
 
-	target_link_libraries( gbench_rq PUBLIC benchmark::benchmark      )
-	target_link_libraries( gbench_rq PUBLIC benchmark::benchmark_main )
-endif()
+target_link_libraries( gbench_nplib PUBLIC benchmark::benchmark      )
+target_link_libraries( gbench_nplib PUBLIC benchmark::benchmark_main )
+
+target_include_directories(
+        gbench_nplib
+        PUBLIC
+        ${CMAKE_HOME_DIRECTORY}/include
+)
