added major part of segment tree implementation

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(
         gtest_vector.cpp
         gtest_prefix.cpp
         gtest_fenwick.cpp
+        gtest_segtree.cpp
 )
 target_link_libraries(
         gtest_nplib
@@ -25,6 +26,13 @@ target_include_directories(
         PUBLIC
         ${CMAKE_HOME_DIRECTORY}/include
 )
+
+add_compile_options( -O1 )
+add_compile_definitions( NPL_DEBUG )
+
+if( NPL_HAS_ASAN )
+        add_compile_definitions( NPL_HAS_ASAN )
+endif()
 
 include( GoogleTest )
 gtest_discover_tests( gtest_nplib )
