update prefix_array tests

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -15,6 +15,7 @@ add_executable(
         gtest_vector.cpp
         gtest_static_vector.cpp
         gtest_prefix.cpp
+        gtest_static_prefix.cpp
         gtest_fenwick.cpp
         gtest_segtree.cpp
 )
