clean up base type traits

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ endif()
 if( NPL_HAS_ASAN )
         add_compile_definitions( NPL_HAS_ASAN )
 endif()
+if( NPL_HAS_STL )
+        add_compile_definitions( NPL_HAS_STL )
+endif()
 
 if( GTEST )
         add_subdirectory( tests )
