--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -15,6 +15,18 @@ jobs:
       - name: build and run tests
         run:  mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON && cmake --build . && ./tests/gtest_nplib
 
+  googletest_macos_clang_w_stl:
+
+    runs-on: macos-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: get cmake
+        uses: lukka/get-cmake@latest
+
+      - name: build and run tests
+        run:  mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON -DNPL_HAS_STL=ON && cmake --build . && ./tests/gtest_nplib
+
   googletest_ubuntu_clang:
 
     runs-on: ubuntu-latest
@@ -26,6 +38,18 @@ jobs:
 
       - name: build and run tests
         run:  export CXX=$(which clang++) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON && cmake --build . && ./tests/gtest_nplib
+
+  googletest_ubuntu_clang_w_stl:
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: get cmake
+        uses: lukka/get-cmake@latest
+
+      - name: build and run tests
+        run:  export CXX=$(which clang++) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON -DNPL_HAS_STL=ON && cmake --build . && ./tests/gtest_nplib
 
   googletest_ubuntu_gcc:
 
@@ -40,4 +64,19 @@ jobs:
         run:  sudo apt install g++-10
 
       - name: build and run tests
-        run:  export CXX=$(which g++-10) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON && cmake --build . && ./tests/gtest_nplib
+        run:  export CXX=$(which g++-10) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_STL=ON && cmake --build . && ./tests/gtest_nplib
+
+  googletest_ubuntu_gcc_w_stl:
+
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: get cmake
+        uses: lukka/get-cmake@latest
+
+      - name: update g++
+        run:  sudo apt install g++-10
+
+      - name: build and run tests
+        run:  export CXX=$(which g++-10) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_STL=ON && cmake --build . && ./tests/gtest_nplib
