--- a/.github/workflows/gtest.yml
+++ b/.github/workflows/gtest.yml
@@ -13,7 +13,7 @@ jobs:
         uses: lukka/get-cmake@latest
 
       - name: build and run tests
-        run:  mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON && cmake --build . && ./tests/gtest_nplib
+        run:  mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON && make -j8 && ./tests/gtest_nplib
 
   googletest_macos_clang:
 
@@ -25,7 +25,7 @@ jobs:
         uses: lukka/get-cmake@latest
 
       - name: build and run tests
-        run:  mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON -DNPL_HAS_STL=ON && cmake --build . && ./tests/gtest_nplib
+        run:  mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON -DNPL_HAS_STL=ON && make -j8 && ./tests/gtest_nplib
 
   googletest_ubuntu_clang_no_stl:
 
@@ -37,7 +37,7 @@ jobs:
         uses: lukka/get-cmake@latest
 
       - name: build and run tests
-        run:  export CXX=$(which clang++) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON && cmake --build . && ./tests/gtest_nplib
+        run:  export CXX=$(which clang++) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON && make -j8 && ./tests/gtest_nplib
 
   googletest_ubuntu_clang:
 
@@ -49,7 +49,7 @@ jobs:
         uses: lukka/get-cmake@latest
 
       - name: build and run tests
-        run:  export CXX=$(which clang++) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON -DNPL_HAS_STL=ON && cmake --build . && ./tests/gtest_nplib
+        run:  export CXX=$(which clang++) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_ASAN=ON -DNPL_HAS_STL=ON && make -j8 && ./tests/gtest_nplib
 
   googletest_ubuntu_gcc_no_stl:
 
@@ -64,7 +64,7 @@ jobs:
         run:  sudo apt install g++-10
 
       - name: build and run tests
-        run:  export CXX=$(which g++-10) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON && cmake --build . && ./tests/gtest_nplib
+        run:  export CXX=$(which g++-10) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON && make -j8 && ./tests/gtest_nplib
 
   googletest_ubuntu_gcc:
 
@@ -79,4 +79,4 @@ jobs:
         run:  sudo apt install g++-10
 
       - name: build and run tests
-        run:  export CXX=$(which g++-10) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_STL=ON && cmake --build . && ./tests/gtest_nplib
+        run:  export CXX=$(which g++-10) && mkdir build && cd build && cmake .. -DCMAKE_BUILD_TYPE=Release -DGTEST=ON -DNPL_DEBUG=ON -DNPL_HAS_STL=ON && make -j8 && ./tests/gtest_nplib
